--- a/dgufest/templates/base.html
+++ b/dgufest/templates/base.html
@@ -50,8 +50,7 @@
 
 </head>
 
-<body>
-<!-- <body oncontextmenu='return false'> -->
+<body oncontextmenu='return false'>
     <!-- Preloader -->
     <div id="preloader">
         <div class="loader"></div>
