--- a/users/templates/users/mypage.html
+++ b/users/templates/users/mypage.html
@@ -27,7 +27,7 @@
     <div class="container">
         <div class="row">
             {% if user.is_authenticated %}
-                <div class="col-12 col-lg-6">
+                <div class="section-heading text-center col-12">
                     <h2 class="wow fadeInUp" data-wow-delay="100ms" contact-title mb-30>내 프로필</h2>
                 </div>
 
@@ -54,20 +54,20 @@
                 <!-- Contact Info -->
                 
                 <!-- Contact Info -->
-                <div class="col-12 col-md-6 col-lg-3">
-                    <div class="col-12 text-right wow fadeInUp" data-wow-delay="800ms">
+                <div class="col-12 text-center">
+                    <div class="col-12 wow fadeInUp" data-wow-delay="800ms">
                         <a href="{% url 'users:password_change' %}" class="btn alime-btn btn-2 mt-15">비밀번호 변경</a>
                     </div>
                 </div>
 
             {% else %}
-                <div class="col-12 col-lg-6">
-                    <h3 class="wow fadeInUp" data-wow-delay="100ms" contact-title mb-30>로그인 후 <br>이용 가능합니다</h3>
+                <div class="col-12 text-center">
+                    <h3 class="wow fadeInUp" data-wow-delay="100ms" contact-title mb-30>로그인 후 이용 가능합니다</h3>
                 </div>
 
-                <div class="col-12 col-md-6 col-lg-3">
-                    <div class="col-12 text-right wow fadeInUp" data-wow-delay="800ms">
-                        <a href="*" class="btn alime-btn btn-2 mt-15">로그인</a>
+                <div class="col-12 text-center">
+                    <div class="col-12 wow fadeInUp" data-wow-delay="800ms">
+                        <a href="{% url 'account_login' %}" class="btn alime-btn btn-2 mt-15">로그인</a>
                     </div>
                 </div>
             {% endif %}
