--- a/dgufest/templates/popup.html
+++ b/dgufest/templates/popup.html
@@ -12,7 +12,7 @@
 </script>
 
 <body>    
-    <img src="{% static 'img/popup-img/popup.jpg' %}" width="500", height="550", alt="">
+    <img src="{% static 'img/popup-img/popup_img.jpg' %}" width="500", height="550", alt="">
 
     <input type="checkbox" name="Notice" onClick="closeWin()">오늘 하루 동안 열지 않음
 </body>
