--- a/registration/templates/registration/activate.html
+++ b/registration/templates/registration/activate.html
@@ -1,4 +1,5 @@
 {% extends "account/base.html" %}
+
 {% load i18n %}
 
 {% block content %}
@@ -8,3 +9,15 @@
 <p>이메일 인증을 하셔야 정상적인 로그인이 가능합니다!</p>
 
 {% endblock %}
+
+{% comment %}
+**registration/registration_form.html**
+Used to show the form users will fill out to register. By default, has
+the following context:
+
+``form``
+    The registration form. This will be an instance of some subclass
+    of ``django.forms.Form``; consult `Django's forms documentation
+    <http://docs.djangoproject.com/en/dev/topics/forms/>`_ for
+    information on how to display this in a template.
+{% endcomment %}
