--- a/dgufest/templates/base.html
+++ b/dgufest/templates/base.html
@@ -21,6 +21,9 @@
 
     <!-- Like -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css"/>
+
+    <!-- font-->
+    <link rel="stylesheet" href="{% static 'css/style3.css' %}">
     
     <script language="javascript">
         function getCookie( cookieName ) {
