--- a/posts/templates/posts/gallery.html
+++ b/posts/templates/posts/gallery.html
@@ -42,9 +42,15 @@
                         {% if "/?sort=random" in request.get_full_path %}
                             <option class="sort-new" value="?new" >최신순</option>
                             <option class="sort-random" value="?sort=random" selected>랜덤순</option>
+                            <option class="sort-likes" value="?sort=likes">좋아요순</option>
+                        {% elif "/?sort=likes" in request.get_full_path %}
+                            <option class="sort-new" value="?new" >최신순</option>
+                            <option class="sort-random" value="?sort=random" >랜덤순</option>
+                            <option class="sort-likes" value="?sort=likes" selected>좋아요순</option>
                         {% else %}
                             <option class="sort-new" value="?new" selected>최신순</option>
                             <option class="sort-random" value="?sort=random" >랜덤순</option>
+                            <option class="sort-likes" value="?sort=likes" >좋아요순</option>
                         {% endif %}
                     </select>
                     <div class="col-12 text-left wow fadeInUp" data-wow-delay="800ms">
