--- a/dgufest/templates/shared/gallery_item.html
+++ b/dgufest/templates/shared/gallery_item.html
@@ -3,7 +3,7 @@
         <div class="single-portfolio-content">
             {% if "video" in post.mediatype %}
                 <div id="video-{{post.id}}" style="display: block !important;">
-                    <video class="col-12" controls >
+                    <video class="col-12" controls preload="metadata">
                         <source src="{{post.mediafile.url}}" alt="video">
                     </video>
                 </div>
