--- a/dgufest/templates/shared/gallery_item.html
+++ b/dgufest/templates/shared/gallery_item.html
@@ -8,12 +8,12 @@
                     </video>
                 </div>
                 <div class="hover-content">
-                    <a href="{% url 'posts:show' post.id %}" class="video-play-btn">+</a>
+                    <a href="{% url 'posts:show' post.id %}" class="whyrano-video">+</a>
                 </div>  
             {% else %}
                 <img src ="{{post.mediafile.url}}" alt="">
                 <div class="hover-content">
-                    <a href="{% url 'posts:show' post.id %}" class="portfolio-img">+</a>
+                    <a href="{% url 'posts:show' post.id %}" class="whyrano-img">+</a>
                 </div>
             {% endif %}
             <p style="padding-top: 20px; word-break: break-all;">{{post.title}}</p>
