--- a/users/templates/users/mypage.html
+++ b/users/templates/users/mypage.html
@@ -50,6 +50,23 @@
                     </div>
                 </div>
                 
+                <div class="col-12 col-md-6 col-lg-3">
+                    <!-- Contact Info -->
+                    <div class="wow fadeInUp" data-wow-delay="100ms" contact-info mb-30>
+                            <p>Name</p>
+                            <a>{{user.name}}</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12 col-md-6 col-lg-3">
+                <!-- Contact Info -->
+                <div class="wow fadeInUp" data-wow-delay="100ms" contact-info mb-30>
+                        <p>학번</p>
+                        <a>{{user.student_id}}</a>
+                </div>
+            </div>
+        </div>
 
                 <!-- Contact Info -->
                 
