--- a/dgufest/templates/shared/navbar.html
+++ b/dgufest/templates/shared/navbar.html
@@ -11,7 +11,7 @@
                     <li><a href="{% url 'users:mypage' %}">- My page</a>
                         <ul class="dropdown">
                             <li><a href="{% url 'users:mypage' %}">- My page</a></li>
-                            <li><a href="#">- 좋아요 누른 글</a></li>
+                            <li><a href="{% url 'posts:like_list' %}">- 좋아요 누른 글</a></li>
                             <li><a href="#">- 내가 쓴 글</a></li>
                         </ul>
                     </li>
@@ -36,7 +36,7 @@
             <li><a href="{% url 'users:mypage' %}">My page</a>
                 <ul class="dropdown">
                     <li><a href="{% url 'users:mypage' %}">- My page</a></li>
-                    <li><a href="#">- 좋아요 누른 글</a></li>
+                    <li><a href="{% url 'posts:like_list' %}">- 좋아요 누른 글</a></li>
                     <li><a href="#">- 내가 쓴 글</a></li>
                 </ul>
             </li>
