--- a/posts/templates/posts/update.html
+++ b/posts/templates/posts/update.html
@@ -27,42 +27,46 @@
                     <form action="{% url 'posts:update' post.id %}" method="POST"  enctype="multipart/form-data">
                         {% csrf_token %}
                         <div class="container">
-                            <div class="form-group">
-                                <label>카테고리</label>
-                                <select name="category" id="category">
-                                    {% if post.category == 'pub' %}
-                                        <option value="pub" selected>주점</option>
-                                        <option value="booth" >부스</option>
-                                        <option value="performance" >공연</option>
-                                        <option value="etc" >기타</option>
-                                    
-                                    {% elif post.category == 'booth' %}   
-                                        <option value="pub" >주점</option>
-                                        <option value="booth" selected>부스</option>
-                                        <option value="performance" >공연</option>
-                                        <option value="etc" >기타</option>
+                            <form>
+                                <div class="form-group">
+                                    <label>카테고리</label>
+                                    <select name="category" id="category" class="form-control col-md-2 mb-2" style="color:black">
+                                        {% if post.category == 'pub' %}
+                                            <option value="pub" selected>주점</option>
+                                            <option value="booth" >부스</option>
+                                            <option value="performance" >공연</option>
+                                            <option value="etc" >기타</option>
+                                        
+                                        {% elif post.category == 'booth' %}   
+                                            <option value="pub" >주점</option>
+                                            <option value="booth" selected>부스</option>
+                                            <option value="performance" >공연</option>
+                                            <option value="etc" >기타</option>
+    
+                                        {% elif post.category == 'performance' %}   
+                                            <option value="pub" >주점</option>
+                                            <option value="booth" >부스</option>
+                                            <option value="performance"selected >공연</option>
+                                            <option value="etc" >기타</option>
+    
+                                        {% elif post.category == 'etc' %}   
+                                            <option value="pub" >주점</option>
+                                            <option value="booth" >부스</option>
+                                            <option value="performance" >공연</option>
+                                            <option value="etc" selected>기타</option>
+                                        {% endif %}
+                                    </select>
+                                </div>
+    
 
-                                    {% elif post.category == 'performance' %}   
-                                        <option value="pub" >주점</option>
-                                        <option value="booth" >부스</option>
-                                        <option value="performance"selected >공연</option>
-                                        <option value="etc" >기타</option>
-
-                                    {% elif post.category == 'etc' %}   
-                                        <option value="pub" >주점</option>
-                                        <option value="booth" >부스</option>
-                                        <option value="performance" >공연</option>
-                                        <option value="etc" selected>기타</option>
-                                    {% endif %}
-                                </select>
-                            </div>
+                            </form>
                         </div>
 
                         <div class="col-12">
-                            <input type="text" class="form-control mb-30" name="title" value = "{{ post.title }}", placeholder="제목 입력" required>
+                            <input type="text" class="form-control mb-30" name="title" value = "{{ post.title }}", placeholder="제목 입력" required style="color:black;">
                         </div>
                         <div class="col-12">
-                            <textarea class="form-control mb-30" name="content" placeholder="내용 입력">{{ post.content }}</textarea>
+                            <textarea class="form-control mb-30" name="content" placeholder="내용 입력" style="color:black;">{{ post.content }} </textarea>
                         </div>
                         <div class="col-12">  
                             <input type="file" name="mediafile" onchange="limitSize(this)" accept="post.mediafile" >
