--- a/posts/templates/posts/gallery.html
+++ b/posts/templates/posts/gallery.html
@@ -37,25 +37,28 @@
                         <button class="btn" data-filter=".performance">공연</button>
                         <button class="btn" data-filter=".etc">기타</button>
                     </div>
-                    <div id="select_box" class="col-12 text-left wow fadeInUp form-group" data-wow-delay="800ms">
-                        <select id="sort-select" onchange="location = this.value;" class="form-control col-md-2 mb-2">
-                            {% if "/?sort=random" in request.get_full_path %}
-                                <option class="sort-new" value="?new" >최신순</option>
-                                <option class="sort-random" value="?sort=random" selected>랜덤순</option>
-                                <option class="sort-likes" value="?sort=likes">좋아요순</option>
-                            {% elif "/?sort=likes" in request.get_full_path %}
-                                <option class="sort-new" value="?new" >최신순</option>
-                                <option class="sort-random" value="?sort=random" >랜덤순</option>
-                                <option class="sort-likes" value="?sort=likes" selected>좋아요순</option>
-                            {% else %}
-                                <option class="sort-new" value="?new" selected>최신순</option>
-                                <option class="sort-random" value="?sort=random" >랜덤순</option>
-                                <option class="sort-likes" value="?sort=likes" >좋아요순</option>
-                            {% endif %}
-                        </select>
-                    </div>
-                    <div class="col-12 text-left wow fadeInUp" data-wow-delay="800ms">
-                        <a href="{% url 'posts:new' %}" class="btn alime-btn btn-2 mt-15">Upload</a>
+                    <div class="alime-contact-form mt-20">
+                        <div id="select_box" class="col-12 text-left wow fadeInUp form-group" data-wow-delay="800ms">
+                            <select id="sort-select" onchange="location = this.value;" class="form-control col-md-2 mb-2" style="color:black";>
+                                {% if "/?sort=random" in request.get_full_path %}
+                                    <option class="sort-new" value="?new" >최신순</option>
+                                    <option class="sort-random" value="?sort=random" selected>랜덤순</option>
+                                    <option class="sort-likes" value="?sort=likes">좋아요순</option>
+                                {% elif "/?sort=likes" in request.get_full_path %}
+                                    <option class="sort-new" value="?new" >최신순</option>
+                                    <option class="sort-random" value="?sort=random" >랜덤순</option>
+                                    <option class="sort-likes" value="?sort=likes" selected>좋아요순</option>
+                                {% else %}
+                                    <option class="sort-new" value="?new" selected>최신순</option>
+                                    <option class="sort-random" value="?sort=random" >랜덤순</option>
+                                    <option class="sort-likes" value="?sort=likes" >좋아요순</option>
+                                {% endif %}
+                            </select>
+                        </div>
+                        <div class="col-12 text-left wow fadeInUp" data-wow-delay="800ms">
+                            <a href="{% url 'posts:new' %}" class="btn alime-btn btn-2 mt-15">Upload</a>
+                        </div>
+    
                     </div>
                 </div>
             </div>
